configs-1/cluster-ip-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: cluster-ip-svc-demo-deployment
    labels:
        app: nginx-dep
spec: 
    replicas: 3
    selector: 
        matchLabels: 
            app: nginx-dep
    template:
        metadata: 
              labels:
                  app: nginx-dep
        spec:
              containers: 
                - name: nginx-pod
                  image: nginx
                  ports: 
                  - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: my-cluster-ip-service
spec: 
    type: ClusterIP
    selector:
      app: nginx-dep
    ports: 
    - port: 3000
      name: nginx-service-port
      protocol: TCP
      targetPort: 80
