configs-1/headless.yaml
apiVersion: v1
kind: Service
metadata: 
    name: my-headless-service
spec: 
    clusterIP: None
    selector:
        app: nginx-dep
    ports: 
    - protocol: TCP
      port: 3000
      targetPort: 80
