configs-1/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: my-loadbalancer-service
spec: 
    type: LoadBalancer
    selector:
      app: nginx-dep
    ports: 
    - port: 3000
      name: nginx-service-port
      protocol: TCP
      targetPort: 80
      nodePort: 31012
