configs-1/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels: 
       app: mongo-express
    name: mongo-express-dep
spec: 
    selector: 
        matchLabels: 
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
            - name: mongo-express-pod
              ports: 
              - containerPort: 8081
              image: mongo-express
---

apiVersion: v1 
metadata:
    name: mongo-express-service
kind: Service

spec:
    type: LoadBalancer
    selector:
        app: mongo-express
    ports: 
    - port: 8081
      targetPort: 8081
      nodePort: 32000
      name: mongo-express-pod-port
