configs-1/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-dep 
    labels:
        app: mongo-db
spec:
    replicas: 3
    selector:
        matchLabels:
            app: mongo-db

    template:
        metadata:
            labels: 
                app: mongo-db

        spec: 
            containers: 
            - name: mongo-db-pod
              image: mongo
              ports: 
              - containerPort: 27017
---

apiVersion: v1 
kind: Service
metadata: 
    name: mongo-db-service
    
spec: 
    selector: 
        app: mongo-db
    ports: 
    - name: mongo-pod-port
      port: 27017
      targetPort: 27017
