configs-1/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: my-nodeport-service
spec: 
    type: NodePort
    selector:
      app: nginx-dep
    ports: 
    - port: 3000
      name: nginx-service-port
      protocol: TCP
      targetPort: 80
      nodePort: 31010
