configs-1/statefulsets.yaml
apiVersion: v1 
kind: Service
metadata:
    name: apache-sts-svc
spec:
    clusterIP: None
    selector: 
        app: apache-sts
    ports: 
      - name: apache-sts-port
        port: 3100
        targetPort: 80


---

apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels: 
        app: apache-sts
    name: apache-sts
spec: 
    replicas: 4
    serviceName: apache-sts
    selector:
        matchLabels:
            app: apache-sts
    template:
        metadata: 
            labels: 
               app: apache-sts
        spec: 
            containers: 
                - name: apache-sts-app
                  image: ubuntu/apache2
                  ports: 
                    - containerPort: 8080
                  volumeMounts: 
                    - name: apache-pvc
                      mountPath: /var/www/html
    volumeClaimTemplates:
      - metadata:
           name: apache-pvc
        spec:
            resources:
                requests: 
                  storage: 10Gi
            storageClassName: standard
            accessModes: ["ReadWriteOnce"]
