configs-1/my-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: website-deployment
    labels:
        app: website
spec: 
    replicas: 1
    selector: 
        matchLabels: 
            app: website
    template:
        metadata: 
              labels:
                  app: website
        spec:
              containers: 
                - name: website-pod
                  image: ubuntu/apache2
                  ports: 
                  - containerPort: 8080
                  volumeMounts: 
                  - name: my-persistent-website
                    mountPath: /var/www/html
              volumes: 
              - name: my-persistent-website
                persistentVolumeClaim: 
                    claimName: my-website-pvc
                  

---

apiVersion: v1
kind: Service
metadata: 
    name: website-service
spec: 
    type: LoadBalancer
    selector:
        app: website
    ports: 
    - name: website-port
      port: 3000
      targetPort: 80
      nodePort: 31001

---

apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
        name: website-dns-ingress
spec:
    rules: 
        - host: my-new-website.com
          http:
                paths: 
                -   path: /
                    pathType: Prefix
                    backend: 
                        service: 
                            name: website-service
                            port: 
                                number: 3000
